# jpegview

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.txt  CMakeLists.txt  CMakePresets.json  COMPILING.txt  README.md  vcpkg.json
.github/actions/build-solution/: action.yml
.github/actions/upload-some-artifacts/: action.yml
.github/actions/wtl-submodule/: action.yml
.github/workflows/: build-debug-win32.yml  build-debug-x64.yml  build-release-win32.yml  build-release-x64.yml  ci-test.yml  release.yml  workflow-build-wtl-cache.yml  workflow-build-wtl-submodule.yml  workflow-rebuild-all-deps.yml
extras/scripts/: jpegview-build-release.bat
src/JPEGView/: AVIFWrapper.cpp  AVIFWrapper.h  AboutDlg.cpp  ApplyFilterHighway.cpp  ApplyFilterHighway.h  BasicProcessing.cpp  BasicProcessing.h  BatchConvertDlg.cpp  BatchConvertDlg.h  BatchRenameDlg.cpp  BatchRenameDlg.h  CMakeLists.txt  Clipboard.cpp  Clipboard.h  ColorPalette.cpp  ColorPalette.h  ColorPaletteDlg.cpp  ColorPaletteDlg.h  CpuImageProcTest.cpp  CropCtl.cpp  CropCtl.h  CrtDbgStub.cpp  DDSWrapper.cpp  DDSWrapper.h  DirectoryWatcher.cpp  DisplayColorProfile.cpp  DisplayColorProfile.h  DuplicateFinderDlg.cpp  DuplicateFinderDlg.h  EXIFDisplayCtl.cpp  EXIFEditDlg.cpp  EXIFEditDlg.h  EXIFReader.cpp  EXIFReader.h  EXRWrapper.cpp  EXRWrapper.h  ExtractFramesDlg.cpp  ExtractFramesDlg.h  FileExtensionsRegistry.cpp  FileList.cpp  (+103 more)
src/JPEGView.Setup/: CMakeLists.txt  Product.wxs
src/JPEGView/Config/: JPEGView.ini  JPEGView.ini.tpl  JPEGView_ru.ini  JPEGView_ru.ini.tpl  KeyMap-README.html  KeyMap.txt.default  KeyMap.txt.default_ru  strings.txt  symbols.km
src/WICLoader/: CMakeLists.txt  MaxImageDef.h  targetver.h
tests/: CMakeLists.txt  GpuLdcTest.cpp  GpuLutTest.cpp  GpuResampleTest.cpp  HighwayLaneTest.cpp  ShaderDiag.cpp
vcpkg-triplets/: x86-windows-static-jpegview.cmake
vcpkg-triplets/openjph/: portfile.cmake
